fuuuck det virker ikke

--- a/index.html
+++ b/index.html
@@ -31,6 +31,18 @@
     </main>
 
     <!-- dialog - create new post -->
+    <dialog id="dialog-createPost">
+        <h2>Create new post</h2>
+        <form id="form-createpost">
+            <label for="title-newPost">Title</label>
+                <input type="text" name="title" id="title_newPost" placeholder="insert title">
+            <label for="body-newPost"></label>
+                <input type="text" name="body" id="body_newPost" placeholder="insert discription">
+            <label for="image-newPost"></label>
+                <input type="url" name="image" id="image_newPost" placeholder="Paste url for image">
+            <button>Create post</button>
+        </form>
+    </dialog>
     <!-- to do  -->
 
     <!-- dialog - update post -->
